2006-03-30  Martin Hunt  <hunt@redhat.com>

	* tapsets.cxx (dwarf_derived_probe::emit_registrations): 
	Change maxactive so single-processor kernels using 
	kretprobes don't get lots of dropped probes.

2006-03-30  Frank Ch. Eigler  <fche@elastic.org>

	PR 953, part 1
	* tapsets.cxx: (mark_derived_probe*): New classes.
	(register_standard_tapsets): Register kernel/module.mark() family.
	* stapmark.h: New header for static instrumentation markers.
	* gen-stapmark.h: New perl script to generate it.
	* elaborate.cxx (derived_probe ctor): Ignore null location*.

2006-03-29  Josh Stone  <joshua.i.stone@intel.com>

	* tapsets.cxx (hrtimer_derived_probe::*): creates a probe point
	based on the hrtimer APIs.
	* tapsets.cxx (hrtimer_builder::*):  parses the user's time-spec
	into a 64-bit nanosecond value, and calls the appropriate
	derived_probe.
	* tapsets.cxx (register_standard_tapsets): add hrtimer bindings
	* translate.cxx (translate_pass): add linux/random.h include,
	used for generating 64-bit random numbers for hrtimers.

2006-03-28  Martin Hunt  <hunt@redhat.com>

	* testsuite/buildok/syscall.stp: Update so
	it works again.

2006-03-16 Tom Zanussi  <zanussi@us.ibm.com>

	* configure.ac: Revert relayfs version check.
	* configure: Reverted.
	* translate.cxx (compile_pass): Remove relayfs include path.

2006-03-15 Tom Zanussi  <zanussi@us.ibm.com>

	* configure.ac: Add check for relayfs version.
	* configure: Regenerated.
	* stp_check.in: Remove bundled relayfs loading/compilation, add
	check for relay (vs relayfs).

2006-03-13  Josh Stone  <joshua.i.stone@intel.com>

	* safety/safety.py: Support IA64 disassembly matching.
	* safety/data/opcodes-ia64: new opcode rules for IA64.
	* safety/data/references: Add references used by example scripts
	when compiled for IA64.

2006-03-13  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (emit_globals): Tag globals, especially the locks,
	as __cacheline_aligned.

2006-03-09  Frank Ch. Eigler  <fche@elastic.org>
